--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:create": "cd src/migrations && typeorm migration:create",
-    "migration:run": "typeorm -d dist/config/ormconfig.js migration:run"
+    "migration:run": "typeorm -d dist/config/ormconfig.js migration:run",
+    "copy:templates": "cpx src/modules/common/email/templates/**/* dist/modules/common/email/templates"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -58,6 +60,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "cpx": "^1.5.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
