setup authentication for queue job UI

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ MAIL_SECURE=false
 MAIL_USERNAME=testmail@gmail.com
 MAIL_SENDER=testmail@gmail.com
 MAIL_PASSWORD=aaaa bbbb cccc dddd
+
+BULL_BOARD_USER=admin
+BULL_BOARD_PASS=123456
+
+REDIS_HOST=localhost
+REDIS_PORT=6380
